<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">WatchDog</string>

    <!-- Category name for bonjour- Mode 1 : Local WiFi [CHAR LIMIT=20] -->
    <string name="bonjour">Mode1:Local WiFi</string>

   <!-- Category name for mqtt- Mode 2 : WorldWide Internet [CHAR LIMIT=20] -->
    <string name="mqtt">Mode2:WorldWide</string>

    <!-- Category name for numbers [CHAR LIMIT=20] -->
    <string name="category_numbers">Numbers</string>

    <string name="scan">Scan</string>
    <string name="stop">Stop</string>

    <string name="settings">Settings</string>
    <string name="prefInternal">Internal Browser</string>
    <string name="prefKeepOn">Keep Screen On</string>
    <string name="prefReset">Reset Web Storage (Restart)</string>
    <string name="loading">Loading </string>
    <string name="authentication">Authentication required</string>
    <string name="textZoom">Text Zoom</string>

    <string name="enter_message">Enter Message</string>
    <string name="publish_message">Publish Message</string>
    <string name="enter_topic">Enter Topic</string>
    <string name="publish_topic">Publish Topic</string>
    <string name="enter_topic1">Enter Topic</string>
    <string name="subscribe_topic">Subscribe Topic</string>
    <string name="subscribe_topic2">Subscribe Topic 2</string>
    <string name="enter_password">Enter Password</string>
    <string name="mqtt_client_pw">Mqtt Client PW</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="mqtt_client_un">Mqtt Client UN</string>
    <string name="tcp_io_adafruit_com_1883">tcp://io.adafruit.com:1883</string>
    <string name="mqtt_broker">Mqtt Broker</string>
    <string name="connect_status">Connect status</string>

    <string name="switch_is_off">Switch is OFF</string>
    <string name="switch_is_on">Switch is ON</string>

</resources>
