<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:asp="http://schemas.android.com/apk/res-auto">

    <androidx.preference.SwitchPreferenceCompat
        android:id="@+id/internal"
        android:defaultValue="false"
        android:key="internalBrowser"
        android:title="@string/prefInternal" />
    <androidx.preference.SwitchPreferenceCompat
        android:id="@+id/keepOn"
        android:defaultValue="true"
        android:key="keepScreenOn"
        android:title="@string/prefKeepOn" />
    <org.sankul.watchdog.CustomSeekBarPreference
        android:id="@+id/textZoom"
        android:defaultValue="100"
        android:key="textZoom"
        android:max="200"
        asp:min="25"
        android:title="@string/textZoom" />
    <androidx.preference.Preference
        android:id="@+id/reset"
        android:defaultValue="false"
        android:key="reset"
        android:title="@string/prefReset"
        />
</androidx.preference.PreferenceScreen>