<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MqSetActivity">

    <LinearLayout
        android:id="@+id/msg"
        android:layout_width="374dp"
        android:layout_height="520dp"
        android:ems="10"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/table"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="5dp">

        <ScrollView
            android:id="@+id/SCROLLER_ID"
            android:layout_width="374dp"
            android:layout_height="520dp"
            android:fillViewport="true"
            android:scrollbars="vertical">
            <TextView
                android:id="@+id/subscribedMsg"
                android:layout_width="374dp"
                android:layout_height="520dp"
                android:layout_weight="1.0"
                android:gravity="bottom"
                tools:ignore="ObsoleteLayoutParam" />
        </ScrollView>
    </LinearLayout>

    <TableLayout
        android:id="@+id/table"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@android:color/black"
        android:gravity="center"
        android:stretchColumns="0,1"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:text="Connect Status"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/cnxStatus"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_column="1"
                android:layout_centerVertical="true"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:hint="@string/connect_status"
                android:textStyle="normal"
                tools:ignore="ObsoleteLayoutParam" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:orientation="vertical">
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:text="@string/mqtt_broker"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/urlBroker"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:text="@string/tcp_io_adafruit_com_1883"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:orientation="vertical">
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:text="@string/mqtt_client_un"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/clientUn"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:hint="@string/enter_user_name"
                android:text="kamat"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:orientation="vertical">
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:text="@string/mqtt_client_pw"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/clientPw"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:hint="@string/enter_password"
                android:text="3852e82e3f884357b9bd3337c254c138"
                android:textStyle="normal"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:orientation="vertical">
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:text="@string/subscribe_topic2"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/subTop2"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:hint="@string/enter_topic"
                android:text="kamat/f/snst"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:orientation="vertical">
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:text="@string/subscribe_topic"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/subTopic"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:hint="@string/enter_topic"
                android:text="kamat/f/swst"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:text="@string/publish_topic"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/pubTopic"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:hint="@string/enter_topic"
                android:text="kamat/f/swcn"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:text="@string/publish_message"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/pubMsg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:hint="@string/enter_message"
                android:text="0"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:textStyle="normal" />
        </TableRow>

    </TableLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/mq_navigation"
        tools:targetApi="n" />


</androidx.constraintlayout.widget.ConstraintLayout>